actor swagger
