# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /
 definitions:
-  handler.actorId:
+  handler.idStruct:
     properties:
       id:
         type: integer
@@ -73,6 +73,28 @@ definitions:
       release_date:
         type: string
     type: object
+  model.FilmCreate:
+    properties:
+      actors:
+        items:
+          type: integer
+        type: array
+      description:
+        maxLength: 1000
+        type: string
+      id:
+        type: integer
+      name:
+        maxLength: 150
+        minLength: 1
+        type: string
+      rating:
+        maximum: 10
+        minimum: 1
+        type: integer
+      release_date:
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -111,7 +133,7 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/handler.actorId'
+          $ref: '#/definitions/handler.idStruct'
       produces:
       - application/json
       responses:
@@ -146,7 +168,7 @@ paths:
         "201":
           description: Returns the ID of the saved actor
           schema:
-            $ref: '#/definitions/handler.actorId'
+            $ref: '#/definitions/handler.idStruct'
         "400":
           description: Bad request
           schema: {}
@@ -186,6 +208,162 @@ paths:
       summary: Update actor
       tags:
       - Actors
+  /film/all:
+    get:
+      description: Get all films with the specified sorting parameters
+      parameters:
+      - description: 'Sort films by: [rating, name, release_date]'
+        in: query
+        name: sort
+        type: string
+      - description: 'Sort direction: [asc, desc]'
+        in: query
+        name: direction
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              items:
+                $ref: '#/definitions/model.Film'
+              type: array
+            type: array
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Get all films with sorting
+      tags:
+      - Film
+  /film/delete:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a film from the database by its ID
+      parameters:
+      - description: Film ID to delete
+        in: body
+        name: filmId
+        required: true
+        schema:
+          $ref: '#/definitions/handler.idStruct'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Film deleted successfully
+          schema:
+            type: string
+        "400":
+          description: Bad request
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: Delete a film by ID
+      tags:
+      - Film
+  /film/name:
+    get:
+      description: Get films by providing a partial film name and actor name
+      parameters:
+      - description: Actor name
+        in: query
+        name: actor
+        type: string
+      - description: Partial film name
+        in: query
+        name: film
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of films
+          schema:
+            items:
+              $ref: '#/definitions/model.Film'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Get films by partial name and actor
+      tags:
+      - Film
+  /film/save:
+    post:
+      consumes:
+      - application/json
+      description: Save a film to the database
+      parameters:
+      - description: Film data to save
+        in: body
+        name: film
+        required: true
+        schema:
+          $ref: '#/definitions/model.FilmCreate'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Film saved successfully
+          schema:
+            $ref: '#/definitions/handler.idStruct'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: Save film
+      tags:
+      - Film
+  /film/update:
+    put:
+      consumes:
+      - application/json
+      description: Update a film in the database
+      parameters:
+      - description: Film object that needs to be updated
+        in: body
+        name: film
+        required: true
+        schema:
+          $ref: '#/definitions/model.Film'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: Update a film
+      tags:
+      - Film
   /user/auth:
     post:
       consumes:
